--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
+    "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "moment": "^2.30.1",
     "next": "^14.2.15",
